<resources>
    <string name="app_name">AdminFlyPass</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="default_time_format" translatable="false">yyyy-MM-dd\'T\'HH:mm:ss.SSS\'Z\'</string>
    <string name="date_format" translatable="false">MMM d, yyyy</string>
    <string name="time_format" translatable="false">HH:mm a</string>

    <!--    Login   -->
    <string name="wrong_password_title">Password Anda Salah!</string>
    <string name="wrong_password_subtitle">Silahkan masukkan password yang benar.</string>
    <string name="wrong_email_title">Email Anda Salah!</string>
    <string name="wrong_email_subtitle">Silahkan masukkan email yang benar.</string>
    <string name="email_exist_title">Email Sudah Anda!</string>
    <string name="email_exist_subtitle">Silahkan masukkan email yang belum terdaftar.</string>
    <string name="wrong_confirm_password_title">Confirm password anda salah!</string>
    <string name="wrong_confirm_password_subtitle">Silahkan masukkan confirm password yang benar.</string>
    <string name="confirm_one_btn_dialog">OK, I got it!</string>
    <string name="flight_code">Flight Code</string>
    <string name="airplane_name">Airplane Name</string>
    <string name="airplane_type">Airplane Type</string>
    <string name="departure">Departure</string>
    <string name="from">From</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="arrival">Arrival</string>
    <string name="to">To</string>
    <string name="seat_class">Seat Class</string>
    <string name="price">Price</string>
    <string name="add_ticket">Add Ticket</string>
    <string name="update_ticket">Update Ticket</string>
    <string name="confirmation_update_ticket_tittle">Yakin Ubah Tiket ?</string>
    <string name="confirmation_update_ticket">Tiket akan terubah permanen. Pastikan informasi penerbangan sudah benar! </string>
    <string name="confirmation_delete_ticket_tittle">Yakin Hapus Tiket ?</string>
    <string name="confirmation_delete_ticket">Tiket akan terhapus permanen. Pastikan riwayat anda tidak diperlukan lagi!</string>
    <string name="depature_flight">Depature Flight</string>
    <string name="direct">Direct</string>
    <string name="show_less_detail">Show Less Detail</string>
    <string name="refundable">Refundable</string>
    <string name="reschedule">Reschedule</string>
    <string name="total_price">Total Price</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="including_tax_fee">including tax fee</string>
    <string name="change">Change</string>
    <string name="search">Kota, negara, airport, kode airport</string>

</resources>